Discord embed 전송시 같은 url title 끼리 묶어서 보내도록.