@@ -8,34 +8,36 @@ import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
-import org.apache.commons.collections4.ListUtils;
 
 import java.util.Collection;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
 public class EmbedMessageImpl implements EmbedMessage {
 
-	private static final int MAX_EMBEDS = 10;
 	private final BiConsumer<Long, Consumer<TextChannel>> action;
 
 	private static List<List<MessageEmbed>> partitioned(Collection<MessageContent.EmbedContent> contents) {
-		return ListUtils.partition(
-				contents
-						.stream()
-						.map(content ->
-								new EmbedBuilder()
-										.setTitle(content.getTitle(), content.getUrl())
-										.setDescription(content.getDescription())
-										.setImage(content.getImageUrl())
-										.build()
-						)
-						.toList()
-				,
-				MAX_EMBEDS);
+		return contents.stream()
+				.collect(Collectors.groupingBy(MessageContent.EmbedContent::getUrl))
+				.values()
+				.stream()
+				.map(list -> list.stream()
+						.map(EmbedMessageImpl::createMessageEmbed)
+						.collect(Collectors.toList()))
+				.collect(Collectors.toList());
+	}
+
+	private static MessageEmbed createMessageEmbed(MessageContent.EmbedContent content) {
+		return new EmbedBuilder()
+				.setTitle(content.getTitle(), content.getUrl())
+				.setDescription(content.getDescription())
+				.setImage(content.getImageUrl())
+				.build();
 	}
 
 	@Override
